--- a/client/src/components/LandingContent.css
+++ b/client/src/components/LandingContent.css
@@ -55,6 +55,7 @@
 @media screen and (max-width: 640px) {
     .hero .content h1 {
         font-size: 3rem;
+        margin-top: -1rem
     }
 
     .hero .content p {
