--- a/client/src/components/SearchBar.css
+++ b/client/src/components/SearchBar.css
@@ -7,13 +7,21 @@
 
 .searchbar input {
     margin-bottom: 1rem;
-    padding: 10px 18px;
+    padding: 0.6rem 1.1rem;
     font-size: 1.1rem;
     background-color: rgba(255, 255, 255, 0.1);
     border-color: rgba(255, 255, 255, 0.1);
-    color: #f4f4f4
+    color: #f4f4f4;
+    text-align: center;
 }
 
 .searchbar .btn {
     height: 100%;
+}
+
+@media screen and (max-width: 640px) {
+    .searchbar {
+        display: flex;
+        flex-direction: column;
+    }    
 }
